<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frontal_free_pc</name>
  <version>0.1.0</version>
  <description>Package with the 'frontal_free_pc' functionality using node and node component</description>
  <maintainer email="cmauricioae8@gmail.com">C. Mauricio Arteaga Escamilla from "Robotica Posgrado" (YouTube channel)</maintainer>
  <license>Apache License 2.0</license>
  <!-- <url type="repository">https://github.com/cmauricioae8</url> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rcl_interfaces</depend>

  <depend>rclcpp_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
